@@ -2,7 +2,10 @@
 <ul>
     <li>Initialize Notification on Load</li>
     <li>add About Entry for 2020.1+</li>
-    <li>#231 jobs in folders: collapsed after refresh: Last Expanded and Selections are restored after Restart IDE too</li>
+    <li>#231 jobs in folders: collapsed after refresh: Last Expanded and Selections are restored after Restart IDE too<br>
+        Loaded Builds are not reloaded on restore last state.
+    </li>
+    <li>#197 Show log for individual builds of selected jobs
 </ul>
 <h3>0.13.7</h3>
 <ul>
